--- a/src/assets/scss/pages/home.scss
+++ b/src/assets/scss/pages/home.scss
@@ -5,7 +5,7 @@
   #select-container {
     display: flex;
     max-width: 30%;
-    justify-content: space-between;
+    justify-content: center;
     padding: 10px 0px;
     margin: auto;
     select {
