--- a/src/assets/scss/components/home/AsrDemoCard/asr-demo-card.scss
+++ b/src/assets/scss/components/home/AsrDemoCard/asr-demo-card.scss
@@ -7,6 +7,7 @@
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
   .controller-container {
     display: flex;
     justify-content: center;
