--- a/src/assets/scss/components/home/AsrDemoCard/asr-demo-card.scss
+++ b/src/assets/scss/components/home/AsrDemoCard/asr-demo-card.scss
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  position: relative;
 
   .controller-container {
     display: flex;
