--- a/src/assets/scss/pages/home.scss
+++ b/src/assets/scss/pages/home.scss
@@ -32,4 +32,14 @@
       }
     }
   }
+
+  .footer {
+    left: 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    line-height: 50px;
+    background: darkgray;
+    color: #fff;
+  }
 }
