--- a/src/assets/scss/pages/home.scss
+++ b/src/assets/scss/pages/home.scss
@@ -23,7 +23,7 @@
 
     button {
       border: none;
-      background-color: dodgerblue;
+      background-color: #006400;
       color: white;
       border-radius: 5px;
       padding: 8px;
