--- a/src/assets/scss/components/home/AsrDemoCard/asr-demo-card.scss
+++ b/src/assets/scss/components/home/AsrDemoCard/asr-demo-card.scss
@@ -22,10 +22,10 @@
       width: 75px;
       height: 75px;
       border-radius: 50%;
-      background-color: royalblue;
+      background-color: #000080;
       cursor: pointer;
       &:hover {
-        background-color: rgb(53, 86, 184);
+        background-color: #00006b;
       }
     }
   }
