--- a/src/assets/scss/pages/home.scss
+++ b/src/assets/scss/pages/home.scss
@@ -22,8 +22,9 @@
     }
 
     button {
+      height: 36px;
       border: none;
-      background-color: #006400;
+      background-color: #000080;
       color: white;
       border-radius: 5px;
       padding: 8px;
