--- a/src/assets/scss/components/shared/dialog-box.scss
+++ b/src/assets/scss/components/shared/dialog-box.scss
@@ -16,6 +16,11 @@
     &.display {
       display: flex;
     }
+
+    input, input::-webkit-input-placeholder {
+      font-size: 20px;
+      line-height: 2;
+    }
   }
 
   .overlay {
