--- a/src/assets/scss/pages/home.scss
+++ b/src/assets/scss/pages/home.scss
@@ -10,6 +10,19 @@
     padding: 10px 0;
     font-size: xx-large;
   }
+
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .logo {
+      margin: 5px;
+      float: left;
+      width: 40px;
+      height: 40px;
+  }
+
   #controller-container {
     max-width: 450px;
     display: flex;
