feature: add recognize status

--- a/src/assets/scss/components/home/AsrDemoCard/asr-demo-card.scss
+++ b/src/assets/scss/components/home/AsrDemoCard/asr-demo-card.scss
@@ -29,4 +29,13 @@
       }
     }
   }
+
+  .recognize-status {
+    display: inline-block;
+    position: absolute;
+    left: 50%;
+    top: 60%;
+    transform: translate(-50%, -50%);
+    color: #888888;
+  }
 }
